complete migration DB

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Defaultconnection": "Server=.;Database=PaymentDetailDB;Trusted_Connection=true;MultipleActiveResultSets=True;"
+  }
 }
